--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -20,16 +23,25 @@
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="edu.ucsb.cs.epsilon.ucsb360.MainActivity"
-        	android:label="@string/app_name" >
-        	<intent-filter>
-        	    <action android:name="android.intent.action.MAIN" />
-        	    <action android:name="android.intent.category.DEFAULT" />
-        	</intent-filter>
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.ucsb.cs.epsilon.ucsb360.Camera"
+            android:label="@string/title_activity_camera" >
+        </activity>
+        <activity
+            android:name="edu.ucsb.cs.epsilon.ucsb360.CameraView"
+            android:label="@string/title_activity_camera_view" >
         </activity>
     </application>
 
