--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,6 @@
         <activity
             android:name="edu.ucsb.cs.epsilon.ucsb360.SplashScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/splash_screen"
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,6 +43,11 @@
             android:name="edu.ucsb.cs.epsilon.ucsb360.CameraView"
             android:label="@string/title_activity_camera_view" >
         </activity>
+        <activity android:name="com.facebook.LoginActivity"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  
+                  />
+        <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
     </application>
 
 </manifest>
