--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:allowBackup="true"
@@ -19,7 +20,6 @@
         <activity
             android:name="edu.ucsb.cs.epsilon.ucsb360.SplashScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/splash_screen"
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +43,11 @@
             android:name="edu.ucsb.cs.epsilon.ucsb360.CameraView"
             android:label="@string/title_activity_camera_view" >
         </activity>
+        <activity android:name="com.facebook.LoginActivity"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  
+                  />
+        <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
     </application>
 
 </manifest>
