--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-16
-android.library=true
+android.library=false
+android.library.reference.1=../../facebook-android-sdk-3.0/facebook
