Added new files for creating the createAugmentation page in UI

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,7 @@
                   />
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.qualcomm.QCARSamples.CloudRecognition.CloudReco"></activity>
+        <activity android:name="edu.ucsb.cs.epsilon.ucsb360.createAugmentation"></activity>
     </application>
 
 </manifest>
