Created the review augmentation page. cancel button goes back to create aug page post button only shows a dialog of what to do done (checkmark) button goes back to cloudReco, but it is causing issue. of locking the camera

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,7 +54,8 @@
                   />
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.qualcomm.QCARSamples.CloudRecognition.CloudReco"></activity>
-        <activity android:name="edu.ucsb.cs.epsilon.ucsb360.createAugmentation"></activity>
+        <activity android:name="edu.ucsb.cs.epsilon.ucsb360.CreateAugmentation"></activity>
+        <activity android:name="edu.ucsb.cs.epsilon.ucsb360.ReviewAugmentation"></activity>
     </application>
 
 </manifest>
