Removed class which is not needed.

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/FacebookSDK"/>
-	<classpathentry exported="true" kind="lib" path="D:/Development/Android/vuforia-sdk-android-2-0-30/build/java/QCAR/QCAR.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Development/vuforia-sdk-android-2-0-30/build/java/QCAR/QCAR.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
