--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,12 @@
         <activity android:name="com.qualcomm.QCARSamples.CloudRecognition.CloudReco"></activity>
         <activity android:name="edu.ucsb.cs.epsilon.ucsb360.CreateAugmentation"></activity>
         <activity android:name="edu.ucsb.cs.epsilon.ucsb360.ReviewAugmentation"></activity>
+		<activity 
+            android:name="com.example.android.apis.graphics.FingerPaint"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:screenOrientation="portrait"
+            
+            ></activity>
     </application>
 
 </manifest>
