--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name="edu.ucsb.cs.epsilon.ucsb360.SplashScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +35,8 @@
         </activity>
         <activity
             android:name="edu.ucsb.cs.epsilon.ucsb360.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.category.DEFAULT" />
